--- a/my-cv-profile/package.json
+++ b/my-cv-profile/package.json
@@ -13,13 +13,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "6.21.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.7.0",
+    "simple-icons": "^16.6.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && node ./node_modules/react-scripts/scripts/build.js",
+    "build": "cross-env CI=false node ./node_modules/react-scripts/scripts/build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +47,8 @@
   "engines": {
     "node": "22.x",
     "npm": "10.x"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0"
   }
 }
